OPAL-25: Removed use of java.ext.dirs in Windows batch files.