@@ -5,7 +5,11 @@ echo OPAL_HOME=%OPAL_HOME%
 if "%JAVA_HOME%" == "" goto JAVA_HOME_NOT_SET
 if "%OPAL_HOME%" == "" goto OPAL_HOME_NOT_SET
 
-java -Djava.ext.dirs="%JAVA_HOME%\jre\lib\ext;%OPAL_HOME%\lib" -cp "%OPAL_HOME%\conf" org.obiba.opal.cli.client.impl.OpalClient %*
+setlocal ENABLEDELAYEDEXPANSION
+
+call "%OPAL_HOME%\bin\setclasspath.bat"
+
+java -cp "%CLASSPATH%" org.obiba.opal.cli.client.impl.OpalClient %*
 goto :END
 
 :JAVA_HOME_NOT_SET
